# auto-shell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_skill_role.sql  003_checkpoints.sql  004_team_workflows.sql
src-tauri/src/: crypto.rs  error.rs  git.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: mod.rs  openai_provider.rs  provider.rs  streaming.rs  tool_loop.rs
src-tauri/src/commands/: ai_commands.rs  chat_commands.rs  file_commands.rs  git_commands.rs  knowledge_commands.rs  mcp_commands.rs  mod.rs  project_commands.rs  settings_commands.rs  skill_commands.rs  terminal_commands.rs  undo_commands.rs  workflow_commands.rs
src-tauri/src/db/: chat_repo.rs  checkpoint_repo.rs  knowledge_repo.rs  mod.rs  project_repo.rs  search_repo.rs  settings_repo.rs  skill_repo.rs  workflow_repo.rs
src-tauri/src/indexing/: indexer.rs  mod.rs  watcher.rs
src-tauri/src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/models/: conversation.rs  file_entry.rs  knowledge.rs  message.rs  mod.rs  project.rs  skill.rs  workflow.rs
src-tauri/src/terminal/: manager.rs  mod.rs  session.rs
src-tauri/src/tools/: definitions.rs  executor.rs  mod.rs  security.rs
src-tauri/src/tools/tool_handlers/: apply_patch.rs  git.rs  grep_search.rs  list_directory.rs  manage_knowledge.rs  manage_skills.rs  (+8 more)
(+250 files in other folders)
