[package]
name = "auto-forge"
version = "0.1.0"
description = "AutoForge — 个人全栈开发者的 AI 工作站"
authors = ["you"]
edition = "2021"

[lib]
name = "auto_forge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-cors-fetch = "5.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"

[package.metadata]
tauri-winres = { icon = "icons/icon.ico" }
